# TALOS

./: .gitignore  Architecture.md  Cargo.toml  Makefile  README.md  blueprint.md  build.rs  command.md  talos2MiraiProject.md
configs/: thresholds.yaml
core/: admission.rs  change_detection.rs  deployment.rs  executor.rs  ingestion.rs  leases.rs  lib.rs  model_backend.rs  observability.rs  optimization.rs  profiles.rs  scheduler.rs  state_machine.rs  stress.rs  telemetry.rs  types.rs  vlm.rs
deployment/: jetson_harden.rs
docs/: architecture.md  metrics_report.md  metrics_summary.json  real_model_backends.md
edge_node/: main.rs
evaluation/: benchmarks.rs
hitl/: baseline.rs
ipc/: cxx_bridge.rs
real_model/: main.rs
reports/hardware_runs/: hitl_gpu_resource_max_thermal55.json  hitl_resource_max_memory.json  hitl_vlm_defer_recovery.json
runtime/: backend.cpp  backend.hpp
runtime/cv/: features.cpp  features.hpp
runtime/vlm/: query.cpp  query.hpp
scripts/: create_tiny_vision_onnx.py  generate_readme_assets.py  pull_jetson_logs.sh  run_dtu_smolvlm_defects.py  sync_jetson_talos.sh  talos_smolvlm_probe.py
tools/: cuda_burn.cu
